# elevation_maps

./: .gitignore  CLAUDE.md  README.md  pyproject.toml
.claude/: settings.json
.specs/: .markdownlint.yml  VISION.md
.specs/features/: FEAT-001-pipeline-overview.md  FEAT-002-elevation-data-fetching.md  FEAT-003-contour-generation.md  FEAT-004-geometry-processing.md  FEAT-005-svg-generation.md  FEAT-006-labels-and-decorative.md  FEAT-007-cli-and-pipeline.md  FEAT-008-high-res-land-data.md  FEAT-009-3d-preview.md  FEAT-010-location-lookup.md  FEAT-011-color-schemes.md  FEAT-012-2d-agent-preview.md  FEAT-013-visual-dev-loop.md  FEAT-014-lake-bathymetry.md  RESEARCH-001-tooling.md
.specs/ideas/: IDEA-001-ornament-mode.md  IDEA-002-road-street-grid.md  IDEA-003-3d-preview.md  IDEA-004-dxf-output.md  IDEA-005-batch-processing.md  IDEA-006-color-schemes.md  IDEA-007-auto-data-source.md  IDEA-008-min-polygon-size.md  IDEA-009-location-lookup.md  IDEA-010-per-layer-svgs.md  IDEA-011-2d-agent-preview.md  IDEA-012-visual-dev-loop.md  IDEA-013-lake-bathymetry.md
scripts/: generate-reference.sh  session-audit.sh  visual-regression-check.py
scripts/hooks/: commit-msg  config.sh  pre-commit  pre-merge-commit  pre-push
tests/: test_contours.py  test_elevation.py  test_render.py
topo2laser/: __init__.py  cli.py  pipeline.py
topo2laser/alignment/: __init__.py  frame.py  outlines.py
topo2laser/contours/: __init__.py  generator.py  layer_calculator.py  simplify.py
topo2laser/elevation/: __init__.py  fetcher.py  merge.py  sources.py
topo2laser/render/: __init__.py  (+1 more)
(+37 files in other folders)
