[build-system]
requires = ["setuptools>=68.0", "setuptools-scm>=8.0"]
build-backend = "setuptools.build_meta"

[project]
name = "topo2laser"
version = "0.1.0"
description = "Convert geographic elevation data to laser-cuttable SVG layers"
requires-python = ">=3.12"
dependencies = [
    "rasterio>=1.3",
    "shapely>=2.0",
    "geopandas>=0.14",
    "svgwrite>=1.4",
    "click>=8.0",
    "requests>=2.31",
    "pyproj>=3.6",
    "xarray>=2024.0",
    "netcdf4>=1.6",
    "matplotlib>=3.8",
]

[project.optional-dependencies]
us = [
    "py3dep>=0.16",
]
landmarks = [
    "osmnx>=1.9",
]
smooth = [
    "svgpathtools>=1.6",
]
dev = [
    "pytest>=8.0",
    "black>=24.0",
    "ruff>=0.3",
    "mypy>=1.8",
    "matplotlib>=3.8",
]

[project.scripts]
topo2laser = "topo2laser.cli:main"

[tool.black]
line-length = 88
target-version = ["py312"]

[tool.ruff]
line-length = 88
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]

[tool.mypy]
python_version = "3.12"
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
